# stdscore-GUI

./: 7zip it.txt  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
