[package]
name = "stdscore-GUI"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
scraper = "0.19"
regex = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
rfd = "0.14"
phf = { version = "0.11", features = ["macros"] }